--- a/public/login.html
+++ b/public/login.html
@@ -1,130 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel – Dashboard Login</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background: url('Hotel-Dashboard-hintergrund.jpg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .login-container {
-            background: rgba(20, 20, 40, 0.9);
-            padding: 30px;
-            border-radius: 12px;
-            width: 350px;
-            text-align: center;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
-        }
-
-        .login-container h1 {
-            color: white;
-            font-size: 24px;
-            margin-bottom: 5px;
-        }
-
-        .login-container p {
-            color: #ccc;
-            font-size: 14px;
-            margin-bottom: 20px;
-        }
-
-        .login-container input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 8px;
-            font-size: 14px;
-        }
-
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            background: #f1f1f1;
-        }
-
-        .login-container button {
-            width: 100%;
-            padding: 12px;
-            background: linear-gradient(90deg, #28a745, #218838);
-            color: white;
-            font-size: 16px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .login-container button:hover {
-            background: linear-gradient(90deg, #218838, #1e7e34);
-        }
-
-        .footer {
-            margin-top: 15px;
-            font-size: 12px;
-            color: #aaa;
-        }
-    </style>
-</head>
-<body>
-    <div class="login-container">
-        <h1>Hotel – Dashboard</h1>
-        <p>Anmelden – bitte Zugangsdaten eingeben.</p>
-        <form>
-            <input type="text" placeholder="Benutzername" required>
-            <input type="password" placeholder="Passwort" required>
-            <button type="submit">Login</button>
-        </form>
-        <div class="footer">
-            © 2025 Hotel – Dashboard
-        </div>
-    </div>
-</body>
-</html>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  var form = document.querySelector('form');
-  if (!form) return;
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
-    var emailInput = form.querySelector('input[type="email"]');
-    var email = (emailInput && emailInput.value || '').trim().toLowerCase();
-    // Regel für Admin: wenn E-Mail mit "admin" beginnt oder exakt "admin@hotel-dashboard.de"
-    var isAdmin = email.startsWith('admin') || email === 'admin@hotel-dashboard.de';
-    window.location.href = isAdmin ? '/admin' : '/app';
-  });
-});
-</script>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  var form = document.querySelector('form');
-  if (!form) return;
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
-
-    // Viele mögliche Selektoren, nimm den ersten Treffer
-    var emailInput = form.querySelector(
-      'input[type="email"], input[name="email"], input#email, input[name="username"], input[type="text"]'
-    );
-    var email = (emailInput && emailInput.value || '').trim().toLowerCase();
-
-    // Admin-Regel: beginnt mit "admin" ODER exakt admin@hotel-dashboard.de
-    var isAdmin = email.startsWith('admin') || email === 'admin@hotel-dashboard.de';
-
-    // Zielseite
-    var target = isAdmin ? '/admin' : '/app';
-    window.location.href = target;
-  });
-});
-</script>
-<script>
-(function(){
+<!doctype html><html lang="de"><meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Hotel Dashboard – Login</title>
+<style>body{font:16px system-ui;background:#0f172a;color:#e2e8f0;display:grid;place-items:center;height:100vh;margin:0}
+.card{background:#111827;padding:2rem 2.5rem;border-radius:1rem;box-shadow:0 10px 30px rgba(0,0,0,.3);max-width:560px}</style>
+<body><div class="card">
+<h1>Login</h1>
+<form method="post" action="/login">
+  <div><label>E-Mail<br><input type="email" name="email" required></label></div>
+  <div><label>Passwort<br><input type="password" name="password" required minlength="8"></label></div>
+  <button type="submit">Anmelden</button>
+</form>
+</div></body></html>
