chore(ui): logo stack = HD-Logo oben + Wortmarke darunter; legacy look preserved; no logic change

--- a/public/login.html
+++ b/public/login.html
@@ -12,9 +12,10 @@
   <div class="wrap">
     <div class="card" role="group" aria-labelledby="hd-title">
       <div class="brand-stack" aria-hidden="true">
-        <img class="hd" src="/assets/logo.png" alt="HD">
-        <img class="wordmark" src="/assets/logo.png" alt="Hotel-Dashboard" id="hd-title" style="opacity:.0; height:1px;">
+        <img class="hd" src="/assets/HD-Logo.png" alt="HD">
+        <img class="wordmark" src="/assets/Hotel-Dashboard-Schriftzug.png" alt="Hotel-Dashboard" id="hd-title">
       </div>
+
       <div class="title-spacer" aria-hidden="true"></div>
 
       <div class="content">
