fix(ui): correct footer text to 'Powered by MY HOME Hotel Lamm Rottweil GmbH'

--- a/public/login.html
+++ b/public/login.html
@@ -53,7 +53,7 @@
       <div class="foot">
         <small>
           © 2025 Hotel-Dashboard<br>
-          Powered by MY HOME HOTEL AM ROTTWEIL GMBH
+          Powered by MY HOME Hotel Lamm Rottweil GmbH
         </small>
       </div>
     </div>
