fix(ui): use absolute /assets paths for logos so they resolve under /login on Render

--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,8 @@
   <div class="wrap">
     <div class="card" role="group" aria-labelledby="hd-title">
       <div class="brand-stack" aria-hidden="true">
-        <img class="hd" src="assets/HD-Logo.png" alt="HD">
-        <img class="wordmark" src="assets/Hotel-Dashboard-Schriftzug.png" alt="Hotel-Dashboard" id="hd-title">
+        <img class="hd" src="/assets/HD-Logo.png" alt="HD">
+        <img class="wordmark" src="/assets/Hotel-Dashboard-Schriftzug.png" alt="Hotel-Dashboard" id="hd-title">
       </div>
 
       <div class="title-spacer" aria-hidden="true"></div>
